--- a/tuto.html
+++ b/tuto.html
@@ -2,3 +2,6 @@
   <h1>vijay</h1>
 </center>
 <hr>
+<p>
+  He is from Chennai. He is a CS engineer. His hobbies are playing cricket, singing songs..
+</p>
